hphp/test/slow/parser/semi-reserved-keywords/enum_class_constant_bad.php.expectf
Fatal error: Enum element cannot be named 'class' in %s/test/slow/parser/semi-reserved-keywords/enum_class_constant_bad.php on line 5